# SongAnalyzer

./: README.md  pyproject.toml
.github/workflows/: ci.yml
checkpoints/: nsynth.pt
docs/: CORPUS_AND_DATA_PIPELINES.md  MESSAGING.md  MODELS.md  PIPELINE_AND_TRAINING.md  PUBSUB_AND_BEAM.md
runs/: dense.jsonl  explore.jsonl
scripts/: eval_maps_piano.py  eval_musdb.py
src/song_analyzer/: __init__.py  audio_io.py  cli.py  cli_messaging.py  pipeline.py  schema.py
src/song_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/song_analyzer/api/: __init__.py  app.py
src/song_analyzer/beam/: __init__.py  handlers.py  pipelines.py
src/song_analyzer/chords/: __init__.py  detect.py
src/song_analyzer/corpus/: __init__.py  db.py  ingest.py  layout.py  manifest.py  song_request.py  store.py  types.py
src/song_analyzer/corpus/connectors/: __init__.py  musicbrainz.py  protocol.py  stub.py
src/song_analyzer/editing/: __init__.py  note_removal.py
src/song_analyzer/eval/: dense_synthetic.py  family_bucket.py  note_metrics.py  sidecar.py
src/song_analyzer/explore/: __init__.py  history.py  param_space.py  proposer.py  runner.py
src/song_analyzer/instruments/: __init__.py  constants.py  infer.py  mel.py  model.py  nsynth_logging.py  nsynth_train_loop.py  nsynth_tune_fingerprint.py  prepare_nsynth.py  train_corpus_finetune.py  train_from_study.py  train_nsynth.py  tune_nsynth.py
src/song_analyzer/messaging/: __init__.py  admin.py  payloads.py  publish.py  topics.py  workflows.py
src/song_analyzer/pitch/: __init__.py  iterative_extract.py  transcribe.py
src/song_analyzer/separation/: README.md  __init__.py  demucs_sep.py
src/song_analyzer/solo/: __init__.py  detect.py  timbre_map.py
src/song_analyzer/structure/: __init__.py  global_analysis.py
tests/: test_api_app.py  test_chords.py  test_corpus.py  test_corpus_song_request.py  test_explore.py  test_global_structure.py  test_iterative_extract.py  test_messaging_handlers.py  test_messaging_payloads.py  test_messaging_workflows.py  test_note_removal.py  test_nsynth_observability.py  test_nsynth_tune_fingerprint.py  test_pipeline_mock.py  test_pubsub_integration_optional.py  test_schema.py  test_solo_detect.py
