[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "song-analyzer"
version = "0.1.0"
description = "Full-mix song analysis for tabbing: separation, NSynth-style instrument ID, pitch, chords, note removal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "soundfile>=0.12",
    "librosa>=0.10",
    "torch>=2.0",
    "torchaudio>=2.0",
    "demucs>=4.0",
    "music21>=9.1",
    "typer>=0.12",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# Basic Pitch needs TensorFlow; TF wheels are not available for Python 3.13+ on all platforms.
basicpitch = [
    "basic-pitch>=0.3",
    "tensorflow>=2.14,<2.15.1; python_version < \"3.13\"",
]
train = [
    "tensorflow>=2.14",
    "tensorflow-datasets>=4.9",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
song-analyzer = "song_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
