[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "song-analyzer"
version = "0.1.0"
description = "Full-mix song analysis for tabbing: separation, NSynth-style instrument ID, pitch, chords, note removal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "importlib-resources>=6.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "soundfile>=0.12",
    "librosa>=0.10",
    "torch>=2.0",
    "torchaudio>=2.0",
    "demucs>=4.0",
    "music21>=9.1",
    "typer>=0.12",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# Basic Pitch needs TensorFlow; no stable PyPI wheels for Python 3.14+ yet (same cutoff as [train]).
basicpitch = [
    "basic-pitch>=0.3",
    "tensorflow>=2.14,<2.15.1; python_version < \"3.14\"",
]
# TensorFlow has no stable wheels for Python 3.14+ yet; keep install working on newer Pythons.
train = [
    "importlib-resources>=6.0",
    "tensorflow>=2.14; python_version < \"3.14\"",
    "tensorflow-datasets>=4.9; python_version < \"3.14\"",
    "optuna>=3.6",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.8",
]

[project.scripts]
song-analyzer = "song_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
mypy_path = "src"
files = ["src/song_analyzer", "tests"]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "demucs.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "basic_pitch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tensorflow"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tensorflow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tensorflow_datasets"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tensorflow_datasets.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "optuna"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "optuna.*"
ignore_missing_imports = true
